create-license/main/default/objects/Replicated_Webhook__e/Replicated_Webhook__e.object-meta.xml
<CustomObject>
    <label>Replicated Webhook</label>
    <pluralLabel>Replicated Webhooks</pluralLabel>
</CustomObject>