create-license/main/default/objects/Replicated_Webhook__e/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Replicated customer ID for routing</description>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>