create-license/main/default/objects/Replicated_Webhook__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Replicated webhook event type (e.g., customer.created, instance.created)</description>
    <label>Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>